# space-logistics-optimization

./: .gitignore  README.md  pyproject.toml  python_test.sbatch
data/opt_results/: 2026_02_18_115648.csv
docs/: class_diagram.md  gurobi_installation.md  ipopt_installation.md  mac_read_me.md  poetry_installation.md  tutorial.md
lib/: __init__.py
lib/alc/: LICENSE  README.md  pyproject.toml
lib/alc/alc/: __init__.py  dimension_converter.py  inner_loop.py  outer_loop.py  subproblems.py  type_defs.py
lib/alc/alc/legacy/: subproblems_pygmo.py
lib/alc/docs/: anaconda-miniconda_installation.md  ipopt_installation.md  poetry_installation.md  subtree_instruction.md
lib/alc/tests/: test_ALC_case1.py  test_ALC_case2.py  test_ALC_inividual_modules.py  test_dimension_converter.py
lib/alc/tests/legacy/: pygmo_test_results.txt  pyomo_test_results.txt  test_ALC_case1_pygmo.py  test_ALC_case2_pygmo.py
src/: initializer.py  input_data_class.py  run.py
src/component_designer/: component_designer_class.py
src/component_designer/spacecraft/: spacecraft_sizing.py
src/network_builder/: network_builder_class.py
src/opt_model_builder/: constraints_cls.py  indicies.py  model_helpers.py  objective.py  opt_model_builder_class.py  variables.py
src/opt_model_builder/constraints/: alc_subprob_components.py  cnt_com_mass_conservation.py  int_com_mass_conservation.py  mass_balance.py  nonanticipativity.py  piecewise_linear.py  propellant_mass_conservation.py  sc_big_M.py  sc_capacity.py  time_window.py
src/optimizer/: alc_subproblems.py  optimizer_class.py  output_manager.py  pwl_approx_problems.py  solver_interface.py
tests/: test_cvx_ncvx_decomposition.py  test_opt_w_fixed_sc_design.py
