[tool.poetry]
name = "spacelogistics-py"
version = "0.1.0"
description = "Space Logistics Python library"
authors = ["misaji3 <masafumi.isaji@gatech.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.2"
numpy = "^1.24"
scipy = "^1"
pyomo = "^6.6"
pandas = "< 2.0.0"
requests = "^2.31.0"
bidict = "^0.22.1"
icecream = "^2.1.3"
plotly = "^5.20.0"
gurobipy = "11.0.3"
tqdm = "^4.67.0"
setuptools = "^75.8.0"
matplotlib = "^3.10.6"
pygmo = {version = "^2.19.5", optional = true}
pygmo-plugins-nonfree = {version = "^0.24", optional = true}


[tool.poetry.group.dev.dependencies]
pytest= "^6.2"
pytest-pythonpath = "^0.7.4"

[tool.pytest.ini_options]
python_paths = ["src", "lib/alc/alc"]
testpaths = ["tests", "lib/alc/tests"]
markers = ["legacy: tests that require pygmo legacy backend"]

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
